# ot-network-microros-renode

./: .gitignore  Dockerfile  README.md  deploy_and_test.sh  docker-compose.yml  test_full_system.sh  test_internal.sh
firmware/actuator_node/: CMakeLists.txt  package.xml
firmware/actuator_node/src/: actuator_node.c
firmware/sensor_node/: CMakeLists.txt  package.xml
firmware/sensor_node/src/: sensor_node.c
renode/: hifive1.repl  ot_network.robot  stm32f4_discovery.repl
scripts/: build_firmware.sh  run_headless_simulation.sh  run_simulation.sh  setup_microros.sh  start_microros_agent.sh
